--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,17 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.my-link{
+    a{
+        text-decoration: none;
+        color: white;
+    }
+    margin: 20px 0;
+    padding: 0.7rem 1.8rem;
+    background-color: #dc3545;
+    width: max-content;
+    border-radius: 1rem;
+}
